# cargo-impact

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  release.yml  security.yml  spec.yml
benches/: baseline.json  pipeline.rs
scripts/: bench-gate.sh
src/: adapters.rs  cfg.rs  config.rs  dedup.rs  derive.rs  diff.rs  doc_drift.rs  dyn_dispatch.rs  ffi.rs  finding.rs  format.rs  git.rs  ignore.rs  lib.rs  log_miss.rs  macro_expand.rs  main.rs  mcp.rs  nextest.rs  ref_context.rs  report.rs  rust_analyzer.rs  semver_checks.rs  symbols.rs  tests_scan.rs  trait_methods.rs  traits.rs
tests/: integration.rs
