[package]
name = "cargo-impact"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Blast-radius analysis and selective test execution for Rust workspaces"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asmuelle/cargo-impact"
readme = "README.md"
keywords = ["cargo", "testing", "regression", "static-analysis", "ai"]
categories = [
    "development-tools::cargo-plugins",
    "development-tools::testing",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# span-locations is required for `Span::start()` / `end()`, used by
# ref_context.rs to map an RA reference line back to its enclosing
# fn / impl / module.
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
walkdir = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "pipeline"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
